# Alice

./: .gitignore  Cargo.toml  README.md  compose.yaml  dependancies.sh
DollMaker/: Dockerfile  DollMaker.md  build.sh  run.sh  stop.sh
DollWrapper/: CMakeLists.txt  envs.sh  setenv.sh  updatecmake.sh
DollWrapper/src/: globals.h  loop.c  loop.cpp  loop.h  main.c  main.cpp  popen2.c  popen2.h  setup.c  setup.cpp  setup.h  types.h
DollWrapper/src/h/: globals.h  loop.h  main.h  popen2.h  setup.h  types.h  vars.h
Shelf/backend/: deplay.py  deploy.py  nodeID  simpleapi.py
Shelf/www/: index.html
Shelf/www/css/: style.css
Shelf/www/js/: dynamic.js  dynamictable.js  index.js
TestExecutables/C/: CMakeLists.txt
TestExecutables/C/src/: echo.c
TestExecutables/Python/: echo.py
TestExecutables/Typescript/: package-lock.json  tsconfig.json
TestExecutables/Typescript/src/: echo.ts
persistence/redis/conf/: redis.conf
rust_src/doll/: Cargo.toml
rust_src/doll/src/: errors.rs  io.rs  main.rs  parser.rs  pipes.rs  spawner.rs  state.rs
rust_src/pipecore/: Cargo.toml
rust_src/pipecore/src/: errors.rs  io.rs  main.rs  pipes.rs
rust_src/shelf/: Cargo.toml
rust_src/shelf/src/: main.rs  server.rs
samples/func/: echo.py  exec.py
samples/svc/: dep.py  echo.py  exec.py
src/: Dockerfile  app.py  requirements.txt
src/gateway/: app.py  interface.py  requirements.txt
src/gateway/bridge/: redis.py
src/static/: form.js  index.html  script.js  style.css  table.js  test.js
src/svc/: pyecho.py  pyexec.py
src/test/: test.py
